# sirus_parser

./: .env  CMakeLists.txt  Dockerfile  Makefile  README.md  logic.drawio  main.cpp  vcpkg-configuration.json  vcpkg.json
include/: download.hpp  test.hpp
include/dbc/: AllStructuresInclude.hpp  DBCHeader.hpp  dbc.hpp
include/dbc/inc/: ItemDisplayInfo.hpp  Spell.hpp  SpellItemEnchantment.hpp  SpellVisualEffectName.hpp  SpellVisualKit.hpp
include/mpq/: mpq.hpp
src/: test.cpp
